syntax = "proto3";

package pb;

import "google/api/annotations.proto";

service Flip {
    rpc IsFlip (FlipRequest) returns (FlipResponse) {
        option (google.api.http) = {
            get: "/v1/isflip/{feature_tag}"
        };
    }

    rpc IsFlipString (FlipStringRequest) returns (FlipResponse) {
        option (google.api.http) = {
            get: "/v1/isflip/string/{feature_tag}/{feature_value}"
        };
    }

    rpc IsFlipInteger (FlipIntegerRequest) returns (FlipResponse) {
        option (google.api.http) = {
            get: "/v1/isflip/integer/{feature_tag}/{feature_value}"
        };
    }

    rpc Health (HealthRequest) returns (HealthResponse) {
        option (google.api.http) = {
            get: "/v1/health"
        };
    }
}

message FlipRequest {
    string feature_tag = 1; // flip name
}

message FlipStringRequest {
    string feature_tag = 1; // flip name
    string feature_value = 2; // check if this value is flip

}

message FlipIntegerRequest {
    string feature_tag = 1; // flip name
    int64  feature_value = 2; // check if this value is flip

}

message FlipResponse {
    bool activated = 1;
}

message HealthRequest {
}

message HealthResponse {
    string health = 1;
    string flip_cache = 2;
    string flip_store = 3;
}